--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "@mui/styles": "^6.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-material-ui-carousel": "^3.4.2"
+    "react-material-ui-carousel": "^3.4.2",
+    "react-multi-carousel": "^2.8.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
