Refactor database connection and update product schema; add CORS support( A big bug solve)

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-DATABASE="mongodb+srv://shaadansari8081:LAjRdq7ZK77MVR87@amazon.oi7ki.mongodb.net/?retryWrites=true&w=majority&appName=amazon"
+DATABASE="mongodb+srv://shaadansari8081:W7seL0mPjIcj2yDp@cluster0.lcgfg.mongodb.net/Amazonweb?retryWrites=true&w=majority&appName=Cluster0"
