--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,15 @@
     "@mui/icons-material": "^6.4.0",
     "@mui/material": "^6.4.0",
     "@mui/styles": "^6.4.1",
+    "@redux-devtools/extension": "^3.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-material-ui-carousel": "^3.4.2",
     "react-multi-carousel": "^2.8.5",
-    "react-router-dom": "^7.1.3"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.3",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
