Add user authentication with JWT; implement login route and toast notifications for registration and login feedback

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 DATABASE="mongodb+srv://shaadansari8081:W7seL0mPjIcj2yDp@cluster0.lcgfg.mongodb.net/Amazonweb?retryWrites=true&w=majority&appName=Cluster0"
+KEY=MohdMohdMohdMohdMohdMohdMohdMohd
