--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-multi-carousel": "^2.8.5",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
+    "react-toastify": "^11.0.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
   },
